--- a/DLS_Assignment1_LoadBalancer/LoadBalancerApi/LoadBalancerApi.csproj
+++ b/DLS_Assignment1_LoadBalancer/LoadBalancerApi/LoadBalancerApi.csproj
@@ -9,8 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="RestSharp" Version="108.0.2" />
+    <PackageReference Include="Stenn.EntityFrameworkCore.InMemory.Extensions.DependencyInjection" Version="6.4.40" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
