done without interface implementation

--- a/DLS_Assignment1_LoadBalancer/docker-compose.override.yml
+++ b/DLS_Assignment1_LoadBalancer/docker-compose.override.yml
@@ -13,6 +13,12 @@ services:
     ports:
       - "80"
 
+  primenumberservice2:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
 
   webapp:
     environment:
