--- a/DLS_Assignment1_LoadBalancer/docker-compose.yml
+++ b/DLS_Assignment1_LoadBalancer/docker-compose.yml
@@ -13,6 +13,12 @@ services:
       context: .
       dockerfile: PrimeNumberService/Dockerfile
 
+  primenumberservice2:
+    image: ${DOCKER_REGISTRY-}primenumberservice
+    build:
+      context: .
+      dockerfile: PrimeNumberService/Dockerfile
+
 
   webapp:
     image: ${DOCKER_REGISTRY-}webapp
